fix(breadcrumb): dont wrap item

--- a/styles/Breadcrumb.scss
+++ b/styles/Breadcrumb.scss
@@ -2,6 +2,7 @@
 
 @include themes-mixin {
   @include b(breadcrumb) {
+    white-space: nowrap;
     @include b(breadcrumb-item) {
       @include once {
         transition: color .3s $default-cubic-bezier;
